<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/info_header">
        <Preference
            app:iconSpaceReserved="false"
            app:key="status"
            app:summary="@string/active_not_title"
            app:title="@string/status_title" />
        <Preference
            app:iconSpaceReserved="false"
            app:key="biliver"
            app:summary="@string/biliver_unknown_title"
            app:title="@string/biliver_title" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/settings_header">

        <CheckBoxPreference
            app:iconSpaceReserved="false"
            app:key="hide_show"
            app:title="@string/hide_show_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/about_header">
        <Preference
            app:iconSpaceReserved="false"
            app:key="version"
            app:summary="0"
            app:title="@string/version" />
        <PreferenceScreen
            app:iconSpaceReserved="false"
            app:key="github"
            app:summary="RealHeart/BiliBiliPurify"
            app:title="@string/github_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/RealHeart/BiliBiliPurify" />
        </PreferenceScreen>

    </PreferenceCategory>

</PreferenceScreen>